--- a/assets/css/_root.css
+++ b/assets/css/_root.css
@@ -72,6 +72,10 @@ body .vue-grid-item {
   height: calc(100vh - var(--header-height) - var(--market-info-height) - 4px);
 }
 
+.max-h-screen-excluding-header-and-market-info {
+  height: calc(100vh - var(--header-height) - var(--market-info-height) - 8px);
+}
+
 .top-market-info {
   top: var(--market-info-height);
 }
